# wsclean

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeVersionInfo.txt  Doxyfile.in  LICENSE  README  TESTING  application.h  areaset.h  buffered_lane.h  casamaskreader.cpp  dftpredictionalgorithm.cpp  dftpredictionalgorithm.h  fftconvolver.cpp  fftconvolver.h  fftresampler.cpp  fftresampler.h  fftwmanager.h  fitsiochecker.cpp  fitsiochecker.h  fitsreader.cpp  fitsreader.h  fitswriter.cpp  fitswriter.h  gaussianfitter.cpp  gaussianfitter.h  hmatrix4x4.h  image.cpp  image.h  imageweights.cpp  imageweights.h  modelrenderer.cpp  modelrenderer.h  msselection.cpp  msselection.h  multibanddata.cpp  multibanddata.h  ndppp.h  (+21 more)
CPack/: CMakeLists.txt  DetermineEnabledAVXFeatures.cmake  DetermineTargetCPU.cmake
aterms/: atermbase.cpp  atermbase.h  atermbeam.h  atermconfig.h  atermresampler.cpp  atermresampler.h  atermstub.h  cache.h  dishaterm.cpp  dishaterm.h  dldmaterm.cpp  dldmaterm.h  everybeamaterm.cpp  everybeamaterm.h  fitsaterm.cpp  fitsaterm.h  fitsatermbase.cpp  fitsatermbase.h  lofarbeamterm.cpp  lofarbeamterm.h  mwabeamterm.cpp  mwabeamterm.h  pafbeamterm.cpp  pafbeamterm.h  telescope.h
chgcentre/: CMakeLists.txt  banddata.h  imagecoordinates.h  main.cpp  multibanddata.h  progressbar.cpp  radeccoord.h
deconvolution/: casamaskreader.h  componentlist.cpp  componentlist.h  controllablelog.h  deconvolution.cpp  deconvolution.h  deconvolutionalgorithm.cpp  deconvolutionalgorithm.h  deconvolutionsettings.h  deconvolutiontable.cpp  deconvolutiontable.h  deconvolutiontableentry.h  genericclean.cpp  genericclean.h  imageset.cpp  imageset.h  iuwtdeconvolution.h  lsdeconvolution.cpp  lsdeconvolution.h  moresane.cpp  moresane.h  paralleldeconvolution.cpp  paralleldeconvolution.h  peakfinder.cpp  peakfinder.h  pythondeconvolution.cpp  pythondeconvolution.h  simpleclean.cpp  simpleclean.h  spectralfitter.cpp  spectralfitter.h  spectralimagefitter.h  subdivision.h  subimagelogset.h  subminorloop.cpp  subminorloop.h
distributed/: mpibig.cpp  mpibig.h  slave.cpp  slave.h  taskmessage.h  wsclean-mp.cpp
gridding/: directmsgridder.cpp  directmsgridder.h  griddingresult.h  gridmode.h  measurementsetgridder.h  msgridderbase.cpp  msgridderbase.h  unavailablegridder.h  visibilitymodifier.cpp  visibilitymodifier.h  visibilityweightingmode.h  wsmsgridder.cpp  wsmsgridder.h  wstackinggridder.cpp  wstackinggridder.h
idg/: averagebeam.cpp  averagebeam.h  dummygridder.h  idgconfiguration.h  idgmsgridder.cpp  idgmsgridder.h  interface.h
interface/: example.py  imaginginterface.h  pywsclean.py  setup.py  wscleaninterface.cpp  wscleaninterface.h
io/: binneduvoutput.h  cachedimageaccessor.h  cachedimageset.h  componentlistwriter.cpp  componentlistwriter.h  facetreader.cpp  facetreader.h  findmwacoefffile.h  imagefilename.h  imageweightcache.h  logger.h  parsetreader.cpp  serialostream.h  wscfitswriter.cpp  wscfitswriter.h
iuwt/: imageanalysis.cpp  imageanalysis.h  iuwtdecomposition.cpp  iuwtdecomposition.h  iuwtdeconvolutionalgorithm.cpp  iuwtdeconvolutionalgorithm.h  iuwtmask.cpp  iuwtmask.h
lofar/: lbeamevaluator.cpp  lbeamevaluator.h  lbeamimagemaker.cpp  lbeamimagemaker.h  lmspredicter.cpp  lmspredicter.h  lofarbeamkeywords.h
main/: commandline.cpp  commandline.h  main.cpp  progressbar.cpp  progressbar.h  settings.cpp  settings.h  stopwatch.cpp  stopwatch.h  wsclean.cpp  wsclean.h
math/: calculatefftsize.h  dijkstrasplitter.h  fftconvolver.cpp  fftconvolver.h  fftkernels.cpp  fftkernels.h  fftresampler.cpp  gaussianfitter.cpp  gaussianfitter.h  imageoperations.cpp  imageoperations.h  modelrenderer.cpp  modelrenderer.h  nlplfitter.cpp  nlplfitter.h  polynomialchannelfitter.cpp  polynomialchannelfitter.h  polynomialfitter.cpp  polynomialfitter.h  renderer.cpp  renderer.h  rmsimage.cpp  rmsimage.h
model/: bbsmodel.h  measuredsed.h  measurement.h  model.cpp  model.h  modelcomponent.h  modelparser.h  modelsource.h  powerlawsed.h  spectralenergydistribution.h  tokenizer.h  writemodel.h
msproviders/: averagingmsrowprovider.cpp  averagingmsrowprovider.h  bdamsrowprovider.cpp  bdamsrowprovider.h  contiguousms.cpp  contiguousms.h  mscolumns.h  (+20 more)
tests/: CMakeLists.txt  test_basics.py  test_command_catalogue.py  test_facets.py  test_veladeconvolution.py  testbaselinedependentaveraging.cpp  testcachedimageset.cpp  testclean.cpp  testcommandline.cpp  testcomponentlist.cpp  testconfig.py.in  testfitsdateobstime.cpp  testfluxdensity.cpp  testgaussianfitter.cpp  testhmatrix4x4.cpp  testimage.cpp  testimageset.cpp  testmultibanddata.cpp  testnlplfitter.cpp  testparsetreader.cpp  testpeakfinder.cpp  testpolynomialchannelfitter.cpp  testpolynomialfitter.cpp  testprimarybeamimageset.cpp  testradeccoord.cpp  testserialization.cpp
tests/aterms/: testcache.cpp
tests/common/: smartptr.h
tests/data/: ds9_2facets.reg  ds9_4facets.reg  ds9_nfacets.reg
tests/deconvolution/: testdeconvolutiontable.cpp  testimageset.cpp
tests/facets/: tFacetDegridding.sh  tPredict.sh
tests/facets/resources/: ds9_facet.reg  point-source-model.fits
tests/idg/: taveragebeam.cpp
tests/integration/: tbasics.cpp  testgenerichogbom.cpp  testmultiscale.cpp  tstitchfacets.cpp  tveladeconvolution.cpp
tests/io/: tcachedimageset.cpp
tests/math/: tdijkstrasplitter.cpp  tgaussianfitter.cpp  tnlplfitter.cpp  tpolynomialchannelfitter.cpp  tpolynomialfitter.cpp  trenderer.cpp
tests/msproviders/: tbdamsrowprovider.cpp  tbdamsrowproviderdata.cpp  tbdamsrowproviderdata.h  tmsrowproviderbase.cpp  tnoisemsrowprovider.cpp
tests/python/: CMakeLists.txt  aterms_checks.py  basic_checks.py  config_vars.py.in  conftest.py  facet_checks.py  long_system_checks.py  spectral_imaging_checks.py  test_deconvolution_write_input.py  utils.py  vela_deconvolution_checks.py
tests/structures/: testimage.cpp  testimagingtable.cpp  testmultibanddata.cpp  tfacetutil.cpp  toutputchannelinfo.cpp  tprimarybeamimageset.cpp  tresources.cpp
tests/system/: tmappedfile.cpp  tthrowruntimeerror.cpp
tests/systemtests/: testconfig.py.in  tests.py
(+437 files in other folders)
